--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
+  
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "mongodb": "^4.11.0"
   },
   "name": "proyecto",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
