--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  
   "dependencies": {
     "express": "^4.18.1",
-    "mongodb": "^4.11.0"
+    "firebase-admin": "^11.2.0",
+    "mongodb": "^4.11.0",
+    "node-unique-id-generator": "^0.1.0"
   },
   "name": "proyecto",
   "version": "1.0.0",
