--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "express": "^4.18.1",
     "firebase-admin": "^11.2.0",
     "mongodb": "^4.11.0",
+    "mongoose": "^6.7.4",
     "node-unique-id-generator": "^0.1.0"
   },
   "name": "proyecto",
